# ProductMonitor

./: Cargo.toml  README.md  config.example.yaml  config.yaml  log.txt  main.rs
src/: main.rs
