[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# NPM (way too many dependencies) experience
[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
serde_json = "1.0.79"
serde = {version = "1.0.136", features = ["derive"]}
serde_yaml = "0.8.23"
tokio = { version = "1.17.0", features = ["full"] }


