[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = {version = "0.11", features = ["json"]}
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
tokio = {version = "1.17", features = ["full"]}
simple_logger = {version = "2.1", default_features = false, features = ["timestamps"]}
log = "0.4"

[profile.release]
strip = "debuginfo"
